# mesos_offer_filtering_allocator_module

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  build.sh  out.txt  test.sh
docker/: Dockerfile.0.28.2.build  Dockerfile.1.0.1.build  docker-compose.0.28.2.test.yml  docker-compose.1.0.1.test.yml  docker-compose.test.yml  docker-env.sh  docker-machine-env.sh
scripts/: build.sh  run.sh  test.sh
src/: offer_filter_module.cpp  offer_filter_module.hpp
template/: README.md.in  build-vars.sh.in  config.h.in  modules.json.in  release-modules.json.in
test/: CMakeLists.txt  test_offer_filter.cpp
